--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/classes/Player.js" defer></script>
-    <script src="./js/classes/EventListeners.js" defer></script>
-    <script src="./js/script.js" defer></script>
     <title>Multi-Room Platform</title>
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <script src="./js/classes/Sprites.js"> </script>
+    <script src="./js/classes/CollisionBlock.js"> </script>
+    <script src="./js/data/collisions.js"> </script>
+    <script src="./js/utils.js"> </script>
+    <script src="./js/classes/Player.js"> </script>
+    <script src="./js/script.js"> </script>
+    <script src="./js/classes/EventListeners.js"> </script>
 </body>
 </html>
