--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <script src="./js/utils.js"> </script>
     <script src="./js/classes/Player.js"> </script>
     <script src="./js/classes/EventListeners.js"> </script>
-    <script src="./js/script.js"> </script>
+    <script src="./js/index.js"> </script>
 </body>
 </html>
